--- a/examples/jumbotron/index.html
+++ b/examples/jumbotron/index.html
@@ -67,7 +67,7 @@
       <hr>
 
       <footer>
-        <p>&copy; 2016 Company, Inc.</p>
+        <p>&copy; Company, Inc.</p>
       </footer>
     </div> <!-- /container -->
 
