--- a/examples/jumbotron/portfolio.html
+++ b/examples/jumbotron/portfolio.html
@@ -38,6 +38,7 @@
 		<li>Pet Store</li>
 		<li>Something Very Awesome</li>
 		<li>Ususable Git Client</li>
+		<li>Vim Tutorial</li>
 	</ul>
   
   </body>
